[package]
name = "sawtooth-alica-message-transaction-payload"
version = "0.1.0"
authors = ["Sven Starcke <sst97@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.8.3"
json = "0.12.4"
sha2 = "0.9.2"
data-encoding = "2.3.1"
